# auto-intel-demo

./: .env.example  .gitignore  HOMEPAGE_OPTIMIZATION_COMPLETE.md  README.md  pyproject.toml
app/: api.py  main.py  scheduler.py  schemas.py
app/collectors/: __init__.py  sources.py
app/services/: dashboard.py  ingestion.py
app/templates/preview/: index.html
auto-intel-demo-main/: HOMEPAGE_ONE_SCREEN_PLAN.md  REBUILD_BLUEPRINT.md
auto-intel-demo-main/app/: __init__.py  config.py  db.py  models.py
auto-intel-demo-main/app/collectors/: base.py
auto-intel-demo-main/app/services/: formatting.py  llm.py  reporting.py  rules.py  time_windows.py  translation.py
auto-intel-demo-main/app/templates/dashboard/: index.html
auto-intel-demo-main/app/templates/intel/: index.html
auto-intel-demo-main/app/templates/ops/: index.html
auto-intel-demo-main/app/templates/reports/: daily.html
auto-intel-demo-main/auto_intel_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
auto-intel-demo-main/scripts/: backfill_translate.py  reprocess_articles.py  test_changes.py  verify_homepage.py
auto-intel-demo-main/tests/: test_reporting.py  test_rules.py  test_scheduler.py
docs/: DEEPSEEK_RESEARCH.md  TECHNICAL_PLAN.md
scripts/: build_today_digest.py  collect_once.py  collect_source.py  demo_collect.py  regenerate_today.py  run_scheduler.py
tests/: test_collectors.py  test_dashboard.py  test_time_windows.py  test_translation.py
