[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-intel-demo"
version = "0.1.0"
description = "Automotive intelligence demo with integrated scheduling, source collection, event filtering, and HTML briefing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "lxml>=5.0.0",
  "openai>=1.54.0",
  "pydantic-settings>=2.6.0",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/**/*.html"]
